          which can't be bothered with basic posix functionality such as signal
          delivery.
        - mention some debugging aids in the tutorial.
        - new env variable PERL_ANYEVENT_MAX_SIGNAL_LATENCY.
        - private (%namespace) log contexts in PERL_ANYEVENT_LOG now have the name
          of the context as title.
	- detect the extremely evil IO::Async::Loop::AnyEvent module and refuse
          to work with it - the author is well aware of the issues but refuses
          to fix them. This extreme step has been taken because the module actively
          attacks the goals of AnyEvent and makes it harder for module authors to use
          AnyEvent.

6.02  Fri Aug 26 20:08:31 CEST 2011
        - log_to_syslog now accepts facility strings.
	- log_to_syslog would not allow facilities - "$facility|$level"
          *literally* means that string. sheesh.
        - the CPAN parser got confused and thought we provide Sys::Syslog, try
          to work around.
        - renamed AnyEvent::Impl::FLTK2 to FLTK.

6.01  Fri Aug 26 07:04:11 CEST 2011
        - INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
          the TTL as fourth element - this affects ->resolve, ->request
          and ->dns_unpack indirectly. Convenience functions such as
          AnyEvent::DNS::{a,txt,mx,srv} are not affected, neither is
          AnyEvent::Socket.
        - INCOMPATIBLE CHANGE: backend authors now should not implement
          one_event or loop, but instead the AnyEvent::CondVar::_wait and _poll
          methods.
        - INCOMPATIBLE CHANGE: verbosity levels have been redefined, see
          AnyEvent (PERL_ANYEVENT_VERBOSE) and AnyEvent::Log for details.
        - DEPRECIATION: please change
          "use AnyEvent::Impl::Perl" to "use AnyEvent::Loop" and
          "AnyEvent::Impl::Perl::loop" to "AnyEvent::Loop::run"
          in your programs, for future compatibility.
        - *blush* idle watcher emulation was borked.